--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "@wdio/cli": "^9.4.1",
     "@wdio/local-runner": "^9.4.1",
-    "@wdio/mocha-framework": "^9.2.8"
+    "@wdio/mocha-framework": "^9.2.8",
+    "chromedriver": "^131.0.2"
   }
 }
