--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "name": "webdriverio-automation",
   "type": "module",
+  "scripts": {
+    "test": "wdio run wdio.conf.js"
+  },
+  "babel": {
+    "presets": ["@babel/preset-env"]
+  },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.0",
+    "@babel/register": "^7.25.9",
     "@wdio/cli": "^9.4.1",
     "@wdio/local-runner": "^9.4.1",
     "@wdio/mocha-framework": "^9.2.8",
